--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
     ]
   },
   "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false
+    "enableI18nLegacyMessageIdFormat": false,
+    "types": [
+      "dom-mediacapture-record"
+    ]
   }
 }
